meta and links added

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wellness Project</title>
+    <title>Ned's Shed</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to the Wellness Project</h1>
+        <h1>Ned's Shed. Let's Talk</h1>
     </header>
     <main>
         <section>
