--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 
 </head>
@@ -26,7 +26,7 @@
 
 <!-- Classes on body set to work with mt-auto on footer to ensure it always stays at the bottom of the page -->
 
-<body class="d-flex flex-column min-vh-100">
+
     <!-- Navigation -->
     <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
         <div class="container">
@@ -56,22 +56,23 @@
         </div>
     </nav>
 
-    <!-- Header -->
-    <header id="header" class="container section">
-        <div class="row">
-            <div class="col-12 col-xl-6 text-center text-xl-start">
-        <h1 class="display-3">Ned's Shed. Let's Talk</h1>
-    
-    <main class="mb-4">
+</header>
 
-        <section>
-            <section id="hero" class="hero-section">
-                <div class="container">
-                  <div class="row">
-                    <div class="col-12">
+    <!-- Hero -->
+    <header id="home" class="header hero">
+        <div class="container-fluid text-center">
+            <div class="row">
+                <div>
+                    <h1>Ned's Shed. Let's talk</h1>
+                </div>
+            </div>
+        </div>
+    </header>
 
-                      <p class="">
-                      Ned's Shed. Is a real and virtual space where Cornish Men can talk. 
+
+<main>
+                      <p>
+                      Ned's Shed is a real and virtual space where Cornish Men can talk. 
 
                 We're men right? Cornish men. We're not meant to share our feelings. Do we?
                 Society expects us to deliver, and well, just to be tough.  And being in Cornwall, we're meant to be as tough as the elements and environment around us demand"
@@ -83,7 +84,6 @@
                 </div>
         </section>
     </header>
-    </main>
     <footer>
         <p>&copy; 2025 Wellness Project. All rights reserved.</p>
     </footer>
