--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </head>
 <body>
 
+
 <!-- Classes on body set to work with mt-auto on footer to ensure it always stays at the bottom of the page -->
 
 
@@ -71,19 +72,22 @@
 
 
 <main>
-                      <p>
-                      Ned's Shed is a real and virtual space where Cornish Men can talk. 
+        <section id="definition">
+            <div class="container mx-auto section">
+                <div class="row">
+                    <div class="col-md-12">
+                <p>
+                Ned's Shed is a real and virtual space where Cornish Men can talk. 
 
-                We're men right? Cornish men. We're not meant to share our feelings. Do we?
-                Society expects us to deliver, and well, just to be tough.  And being in Cornwall, we're meant to be as tough as the elements and environment around us demand"
+                We're men right? Cornish men. We're not meant to share our feelings. Are we?
+                Society expects us to deliver.  And being in Cornwall, we're meant to be as tough as the elements and environment around us demand.
                 
                 So what happens if you've got something bottled up and you need to share it? Because we all know the meaning of 'it's better out than in'.  Well if you're looking for somewhere, you've come to the right place.</p  
-                      </p>
-                    </div>
+                  </p>
                   </div>
                 </div>
         </section>
-    </header>
+</main>
     <footer>
         <p>&copy; 2025 Wellness Project. All rights reserved.</p>
     </footer>
