--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container-fluid text-center">
             <div class="row">
                 <div>
-                    <h1>Ned's Shed. Let's talk</h1>
+                    <h1>Neds Shed. Let's talk.</h1>
                 </div>
             </div>
         </div>
