--- a/index.html
+++ b/index.html
@@ -57,17 +57,15 @@
         </div>
     </nav>
 
-</header>
-
     <!-- Hero -->
 
     <header id="home" class="header hero">
         <div class="container-fluid text-center">
             <div class="row">
                 <div>
-                    <h1>Ned's Shed. Let's Talk./h1>
+                    <h1>Ned's Shed. Let's Talk.</h1>
                 </div>
-            </div>
+        </div>
         </div>
     </header>
 
@@ -76,7 +74,10 @@
         <section id="definition">
             <div class="container mx-auto section">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12 text-center">
+                        <h2>What is Ned's Shed?</h2>
+                        <p>
+                            Ned's Shed is a real and virtual space where
                 <p>
                 Ned's Shed is a real and virtual space where Cornish Men can talk. 
 
@@ -85,6 +86,7 @@
                 
                 So what happens if you've got something bottled up and you need to share it? Because we all know the meaning of 'it's better out than in'.  Well if you're looking for somewhere, you've come to the right place.</p  
                   </p>
+                  </div>
                   </div>
                 </div>
         </section>
