--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="assets/css/style.css">
+<!-- font-awesome link -->
+
+
+<link rel="stylesheet" href="assets/css/style.css">
 
 
 </head>
@@ -131,8 +134,6 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
                     </section>
     </main>
     <footer>
