--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-<!-- font-awesome link -->
-
-
 <link rel="stylesheet" href="assets/css/style.css">
 
 
@@ -94,12 +91,13 @@
                 </div>
             </div>
        
+            <section>
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="card h-100 card shadow">
-                                        <img src="" class="card-img-top" alt="Icon1">
                                         <div class="card-body">
+                                            <i class="fa-solid fa-door-closed fa-4x" alt="closed door"></i>
                                             <h4 class="card-title text-uppercase">WHY OPENING UP IS DIFFICULT FOR US</h4>
                                             <p class="card-text">Ever heard the phrase 'Man Up'? Revealing our emotions is a sign of weakness right? Well society is changing, we don't have to keep it all in anymore.</p>
                                         </div>
@@ -107,26 +105,26 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="card h-100 card shadow">
-                                        <img src="" class="card-img-top" alt="Icon2">
-                                        <div class="card-body">
+                                     <div class="card-body">
+                                            <i class="fa-solid fa-ear-listen fa-4x center" alt="Ear"></i>
                                             <h4 class="card-title text-uppercase">WE'RE ALL LISTENING MATE</h4>
                                             <p class="card-text">If you have a problem,
                                                 there's immediate
                                                 support in the Shed.
                                                 Where you have instant
-                                                access to men who who
+                                                access to men who
                                                 want to listen, help or
-                                                just have a bit of banter</p>
+                                                just have a bit of banter.</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="card h-100 card shadow">
-                                        <img src="" class="card-img-top" alt="Icon3">
                                         <div class="card-body">
+                                            <i class="fa-regular fa-thumbs-up fa-4x"></i>
                                             <h4 class="card-title text-uppercase">COME ON IN</h4>
                                             <p class="card-text">Enter the Shed and
-                                                sharing whatever's on
+                                                share whatever's on
                                                 your mind. As we've said
                                                 it's better out than in.
                                                 Come to a meet up, or join
@@ -139,6 +137,10 @@
     <footer>
         <p>&copy; 2025 Wellness Project. All rights reserved.</p>
     </footer>
+</body>
+
+ <!-- Font Awesome kit -->
+ <script src="https://kit.fontawesome.com/aa9af45995.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
