--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
                         <a class="nav-link" href="#">Stories</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="game-library.html">Find a shed</a>
+                        <a class="nav-link" href="#">More info</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="find-a-shed.html"><button-type="button">Find a shed</a></button>
                     </li>
                 </ul>
             </div>
@@ -92,6 +95,8 @@
             </div>
        
             <section>
+
+                <h3 id="howz">How it works:</h3>
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-4">
@@ -106,7 +111,7 @@
                                 <div class="col-md-4">
                                     <div class="card h-100 card shadow">
                                      <div class="card-body">
-                                            <i class="fa-solid fa-ear-listen fa-4x center" alt="Ear"></i>
+                                            <i class="fa-solid fa-ear-listen fa-4x" alt="Ear"></i>
                                             <h4 class="card-title text-uppercase">WE'RE ALL LISTENING MATE</h4>
                                             <p class="card-text">If you have a problem,
                                                 there's immediate
@@ -133,6 +138,45 @@
                                     </div>
                                 </div>
                     </section>
+                    <section>
+<h3 id="howz">Gallery</h3>
+                        <div class="container">
+                            <div class="row">
+
+                    <section>
+<h3 id="howz">Meet some of our members:</h3>
+
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="card h-100 card shadow">
+                                        <div class="card-body">
+                                            <h4 class="card-title text-uppercase">Ken, 41, Camborne</h4>
+                                            <p class="card-text">"I have never classed myself as a loner, but I did for many reasons find myself alone. Then I joined Ned's Shed and made new friends."</p>
+                                        </div>
+                                    </div>
+                                  </div>
+                                            <div class="col-md-4">
+                                                <div class="card h-100 card shadow">
+                                                    <div class="card-body">
+                                                        <h4 class="card-title text-uppercase">Arthur, 38, Tintagel</h4>
+                                                        <p class="card-text">"I found myself widowed at an early age, but Ned's Shed helped me start anew, and also provided an instant rugby team."</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                                                <div class="col-md-4">
+                                                                    <div class="card h-100 card shadow">
+                                                                        <div class="card-body">
+                                                                            <h4 class="card-title text-uppercase">Cliff, 52, St Austell</h4>
+                                                                            <p class="card-text">"I was redundent for a while and had some health issues, but Ned's Shed help me realise I wasn't the only one."</p>
+                    </section>
+
+                        </section>
+                    <section>
+                        <section>
+                            <h4 id="howz">Need to know more about Men's mental health issues?</h4>
+                        </section>
+
     </main>
     <footer>
         <p>&copy; 2025 Wellness Project. All rights reserved.</p>
