--- a/find-a-shed.html
+++ b/find-a-shed.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>nothing here yet!</h1>
+    <h1>Nothing here yet! Coming in round 2</h1>
 </body>
 </html>
