--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-<link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 
 </head>
@@ -52,7 +52,7 @@
                         <a class="nav-link" href="#">More info</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#">Join Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="find-a-shed.html"><button-type="button">Find a shed</a></button>
@@ -75,7 +75,7 @@
     </header>
 
     <main>
-        <section id="definition padding-80px">
+        <section>
             <div class="container mx-auto section">
                 <div class="row">
                     <div class="col-md-12 text-center">
@@ -93,89 +93,108 @@
                     </div>
                 </div>
             </div>
-       
+        </section>
+        <section>
+            <div class="container">
+                <div class="container">
+                    <h3>How it works:</h3>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="card h-100 card shadow">
+                                <div class="card-body">
+                                    <i class="fa-solid fa-door-closed fa-4x" alt="closed door"></i>
+                                    <h4 class="card-title text-uppercase">WHY OPENING UP IS DIFFICULT FOR US</h4>
+                                    <p class="card-text">Ever heard the phrase 'Man Up'? Revealing our emotions is a
+                                        sign of weakness right? Well society is changing, we don't have to keep it all
+                                        in anymore.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card h-100 card shadow">
+                                <div class="card-body">
+                                    <i class="fa-solid fa-ear-listen fa-4x" alt="Ear"></i>
+                                    <h4 class="card-title text-uppercase">WE'RE ALL LISTENING MATE</h4>
+                                    <p class="card-text">If you have a problem,
+                                        there's immediate
+                                        support in the Shed.
+                                        Where you have instant
+                                        access to men who
+                                        want to listen, help or
+                                        just have a bit of banter.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card h-100 card shadow">
+                                <div class="card-body">
+                                    <i class="fa-regular fa-thumbs-up fa-4x"></i>
+                                    <h4 class="card-title text-uppercase">COME ON IN</h4>
+                                    <p class="card-text">Enter the Shed and
+                                        share whatever's on
+                                        your mind. As we've said
+                                        it's better out than in.
+                                        Come to a meet up, or join
+                                        or set up a video chat.</p>
+                                       </div>
+                            </div>
+                        </div>
+                            <a class="nav-link" href="find-a-shed.html"><button-type="button"><h4>Chat Now</h4></a></button>   
+        </section>
+        <section>
+
+            <div class="container">
+                <div class="row">
+                    <h3 id="howz">Gallery</h3>
+                </div>
+            </div>
+            </section>
             <section>
+                 <div class="container">
+                    <div class="container">
+                        <h3>Meet some of our members:</h3>
+                        <div class="row">
+                            <div class="col-md-4">
+                        <div class="card h-100 card shadow">
+                            <img src="assets/images/Kencopy.png" class="card-img-top" alt="Ken">
+                            <div class="card-body">
+                                <h4 class="card-title text-uppercase">Ken, 41, Camborne</h4>
+                                <p class="card-text">"I have never classed myself as a loner, but I did for many reasons
+                                    find myself alone. Then I joined Ned's Shed and made new friends."</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card h-100 card shadow">
+                            <img src="assets/images/Mike3.png" class="card-img-top" alt="Mike">
+                            <div class="card-body">
+                                <h4 class="card-title text-uppercase">Mike, 38, Tintagel</h4>
+                                <p class="card-text">"I found myself widowed at an early age, but Ned's Shed helped me
+                                    start anew, and also provided an instant rugby team."</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card h-100 card shadow">
+                            <img src="assets/images/CornishCliff3.png" class="card-img-top" alt="Cliff">
 
-                <h3 id="howz">How it works:</h3>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <div class="card h-100 card shadow">
-                                        <div class="card-body">
-                                            <i class="fa-solid fa-door-closed fa-4x" alt="closed door"></i>
-                                            <h4 class="card-title text-uppercase">WHY OPENING UP IS DIFFICULT FOR US</h4>
-                                            <p class="card-text">Ever heard the phrase 'Man Up'? Revealing our emotions is a sign of weakness right? Well society is changing, we don't have to keep it all in anymore.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="card h-100 card shadow">
-                                     <div class="card-body">
-                                            <i class="fa-solid fa-ear-listen fa-4x" alt="Ear"></i>
-                                            <h4 class="card-title text-uppercase">WE'RE ALL LISTENING MATE</h4>
-                                            <p class="card-text">If you have a problem,
-                                                there's immediate
-                                                support in the Shed.
-                                                Where you have instant
-                                                access to men who
-                                                want to listen, help or
-                                                just have a bit of banter.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="card h-100 card shadow">
-                                        <div class="card-body">
-                                            <i class="fa-regular fa-thumbs-up fa-4x"></i>
-                                            <h4 class="card-title text-uppercase">COME ON IN</h4>
-                                            <p class="card-text">Enter the Shed and
-                                                share whatever's on
-                                                your mind. As we've said
-                                                it's better out than in.
-                                                Come to a meet up, or join
-                                                or set up a video chat.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                    </section>
-                    <section>
-<h3 id="howz">Gallery</h3>
-                        <div class="container">
-                            <div class="row">
+                            <h4 class="card-title text-uppercase">Cliff, 52, St Austell</h4>
+                            <p class="card-text">"I was redundent for a while and had some health issues, but Ned's Shed
+                                help me realise I wasn't the only one."</p>
+            </section>
 
-                    <section>
-<h3 id="howz">Meet some of our members:</h3>
-
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <div class="card h-100 card shadow">
-                                        <div class="card-body">
-                                            <h4 class="card-title text-uppercase">Ken, 41, Camborne</h4>
-                                            <p class="card-text">"I have never classed myself as a loner, but I did for many reasons find myself alone. Then I joined Ned's Shed and made new friends."</p>
-                                        </div>
-                                    </div>
-                                  </div>
-                                            <div class="col-md-4">
-                                                <div class="card h-100 card shadow">
-                                                    <div class="card-body">
-                                                        <h4 class="card-title text-uppercase">Arthur, 38, Tintagel</h4>
-                                                        <p class="card-text">"I found myself widowed at an early age, but Ned's Shed helped me start anew, and also provided an instant rugby team."</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                                                <div class="col-md-4">
-                                                                    <div class="card h-100 card shadow">
-                                                                        <div class="card-body">
-                                                                            <h4 class="card-title text-uppercase">Cliff, 52, St Austell</h4>
-                                                                            <p class="card-text">"I was redundent for a while and had some health issues, but Ned's Shed help me realise I wasn't the only one."</p>
-                    </section>
-
-                        </section>
-                    <section>
-                        <section>
-                            <h4 id="howz">Need to know more about Men's mental health issues?</h4>
-                        </section>
+        </section>
+        <section>
+            <section>
+                <div class="container">
+                    <div class="row">
+                <h4>Need to know more about Men's mental health issues?</h4>
+                <h5>Here's some links to delve a little deeper:</h5>
+                <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/men-and-mental-health">Mental Health Foundation</a>
+                <a href="https://www.mind.org.uk/about-us/our-policy-work/reports-and-guides/get-it-off-your-chest-a-report-on-men-s-mental-health/">Mind</a>
+                <a href="https://www.nhs.uk/mental-health/">NHS</a>
+                </div>
+            </section>
 
     </main>
     <footer>
@@ -183,8 +202,8 @@
     </footer>
 </body>
 
- <!-- Font Awesome kit -->
- <script src="https://kit.fontawesome.com/aa9af45995.js" crossorigin="anonymous"></script>
+<!-- Font Awesome kit -->
+<script src="https://kit.fontawesome.com/aa9af45995.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
