--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <div class="row">
                             <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/Kencopy.png" class="card-img-top" alt="Ken">
+                            <img src="assets/images/Kencopy.png" class="card-img-top" id="portrait" alt="Ken">
                             <div class="card-body">
                                 <h4 class="card-title text-uppercase">Ken, 41, Camborne</h4>
                                 <p class="card-text">"I have never classed myself as a loner, but I did for many reasons
@@ -166,7 +166,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/Mike3.png" class="card-img-top" alt="Mike">
+                            <img src="assets/images/Mike3.png" class="card-img-top" id="portrait" alt="Mike">
                             <div class="card-body">
                                 <h4 class="card-title text-uppercase">Mike, 38, Tintagel</h4>
                                 <p class="card-text">"I found myself widowed at an early age, but Ned's Shed helped me
@@ -176,7 +176,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/CornishCliff3.png" class="card-img-top" alt="Cliff">
+                            <img src="assets/images/CornishCliff3.png" class="card-img-top" id="portrait" alt="Cliff">
 
                             <h4 class="card-title text-uppercase">Cliff, 52, St Austell</h4>
                             <p class="card-text">"I was redundent for a while and had some health issues, but Ned's Shed
@@ -191,13 +191,37 @@
                 <h4>Need to know more about Men's mental health issues?</h4>
                 <h5>Here's some links to delve a little deeper:</h5>
                 <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/men-and-mental-health">Mental Health Foundation</a>
+                <h6>Expert Mental Health Advice</h6>
                 <a href="https://www.mind.org.uk/about-us/our-policy-work/reports-and-guides/get-it-off-your-chest-a-report-on-men-s-mental-health/">Mind</a>
+                <h6>The challenges facing men and their mental health today</h6>
                 <a href="https://www.nhs.uk/mental-health/">NHS</a>
+                <h6>Your local NHS resource</h6>
                 </div>
             </section>
 
     </main>
     <footer>
+                        <!-- Contact info -->
+                        <div class="col-12 col-md-6 col-xl-4">
+                            <h3 class="sub-heading-color">Contact info</h3>
+                            <address>
+                                <strong><i class="fa-solid fa-location-dot"></i>Ned's Shed Registered Charity</strong><br>
+                                Truro<br>
+                                Cornwall, TR1 1AA
+                            </address>
+                            <p><i class="fa-solid fa-phone"></i> 01872 111000<br>
+                            </p>
+                            <div class="social-links my-4">
+                                <a href="https://www.instagram.com" target="_blank"
+                                    aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
+                                        class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.facebook.com" target="_blank"
+                                    aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener"><i
+                                        class="fa-brands fa-square-facebook"></i></a>
+                                <a href="https://www.x.com" target="_blank" aria-label="Visit our X feed (opens in a new tab)"
+                                    rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
+                            </div>
+                        </div> 
         <p>&copy; 2025 Wellness Project. All rights reserved.</p>
     </footer>
 </body>
