new changes portrait

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <div class="row">
                             <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/Kencopy.png" class="card-img-top" id="portrait" alt="Ken">
+                            <img src="assets/images/Kencopy.png" class="card-img-top" id="portrait" width="400" height="400" alt="Ken">
                             <div class="card-body">
                                 <h4 class="card-title text-uppercase">Ken, 41, Camborne</h4>
                                 <p class="card-text">"I have never classed myself as a loner, but I did for many reasons
@@ -166,7 +166,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/Mike3.png" class="card-img-top" id="portrait" alt="Mike">
+                            <img src="assets/images/Mike3.png" class="card-img-top" width="400" height="400" id="portrait" alt="Mike">
                             <div class="card-body">
                                 <h4 class="card-title text-uppercase">Mike, 38, Tintagel</h4>
                                 <p class="card-text">"I found myself widowed at an early age, but Ned's Shed helped me
@@ -176,8 +176,8 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/CornishCliff3.png" class="card-img-top" id="portrait" alt="Cliff">
-
+                            <img src="assets/images/CornishCliff3.png" class="card-img-top" width="400" height="400" id="portrait" alt="Cliff">
+                            <div class="card-body">
                             <h4 class="card-title text-uppercase">Cliff, 52, St Austell</h4>
                             <p class="card-text">"I was redundent for a while and had some health issues, but Ned's Shed
                                 help me realise I wasn't the only one."</p>
@@ -190,8 +190,8 @@
                     <div class="row">
                 <h4>Need to know more about Men's mental health issues?</h4>
                 <h5>Here's some links to delve a little deeper:</h5>
-                <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/men-and-mental-health">Mental Health Foundation</a>
-                <h6>Expert Mental Health Advice</h6>
+                <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/men-and-mental-health"><h6>Expert Mental Health Advice.</h6>Mental Health Foundation</a>
+                <h6>Expert Mental Health Advice.</h6>
                 <a href="https://www.mind.org.uk/about-us/our-policy-work/reports-and-guides/get-it-off-your-chest-a-report-on-men-s-mental-health/">Mind</a>
                 <h6>The challenges facing men and their mental health today</h6>
                 <a href="https://www.nhs.uk/mental-health/">NHS</a>
