--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Stories</a>
+                        <a class="nav-link" href="#stories">Stories</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">More info</a>
+                        <a class="nav-link" href="#links">More info</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Join Us</a>
+                        <a class="nav-link" href="#Join">Join Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="find-a-shed.html"><button-type="button">Find a shed</a></button>
@@ -75,7 +75,7 @@
     </header>
 
     <main>
-        <section>
+        <section id="intro" class="container">
             <div class="container mx-auto section">
                 <div class="row">
                     <div class="col-md-12 text-center">
@@ -149,7 +149,7 @@
                 </div>
             </div>
             </section>
-            <section>
+            <section id="stories">
                  <div class="container">
                     <div class="container">
                         <h3>Meet some of our members:</h3>
@@ -184,8 +184,7 @@
             </section>
 
         </section>
-        <section>
-            <section>
+            <section id="links">
                 <div class="container">
                     <div class="row">
                 <h4>Need to know more about Men's mental health issues?</h4>
