--- a/index.html
+++ b/index.html
@@ -183,25 +183,31 @@
                                 help me realise I wasn't the only one."</p>
             </section>
 
-        </section>
             <section id="links">
                 <div class="container">
                     <div class="row">
-                <h4>Need to know more about Men's mental health issues?</h4>
+                <h2>Need to know more about men's mental health issues?</h2>
                 <h5>Here's some links to delve a little deeper:</h5>
-                <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/men-and-mental-health"><h6>Expert Mental Health Advice.</h6>Mental Health Foundation</a>
+                <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/men-and-mental-health">Mental Health Foundation</a>
                 <h6>Expert Mental Health Advice.</h6>
-                <a href="https://www.mind.org.uk/about-us/our-policy-work/reports-and-guides/get-it-off-your-chest-a-report-on-men-s-mental-health/">Mind</a>
-                <h6>The challenges facing men and their mental health today</h6>
-                <a href="https://www.nhs.uk/mental-health/">NHS</a>
-                <h6>Your local NHS resource</h6>
+                <a href="https://www.mind.org.uk/information-support/your-stories/why-men-need-to-talk/"><img src="assets/images/MHFlogo.png></a>
+                <h6>Get it off your chest.</h6
+                    <a href ="https://www.nhs.uk/mental-health"><img src=-"assets/images/NHSlogo.png></a>
+                    <h6>Your local NHS resource.</h6>
                 </div>
+                </div
             </section>
 
-    </main>
-    <footer>
-                        <!-- Contact info -->
-                        <div class="col-12 col-md-6 col-xl-4">
+            <!-- contact info-->
+    
+                            <section id="Join">
+                                <div class="container">
+                                    <div class="row">
+                                        <h2>Join Us</h2>
+                                        <p>Want to join us? Fill in the form below and we'll get back to you.</p>
+                                        <form action="form.php" method="post">
+                                            <div class="form-group
+                            <div class="row">
                             <h3 class="sub-heading-color">Contact info</h3>
                             <address>
                                 <strong><i class="fa-solid fa-location-dot"></i>Ned's Shed Registered Charity</strong><br>
@@ -221,12 +227,19 @@
                                     rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
                             </div>
                         </div> 
-        <p>&copy; 2025 Wellness Project. All rights reserved.</p>
+</div>
+</div>
+</section>
+</main>
+<!-- Contact info -->
     </footer>
+    <p>&copy; 2025 Wellness Project. All rights reserved.</p>
+</footer>
 </body>
 
 <!-- Font Awesome kit -->
 <script src="https://kit.fontawesome.com/aa9af45995.js" crossorigin="anonymous"></script>
 </body>
 
-</html>
+</html> 
+
