--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             <div class="card-body">
                             <h4 class="card-title text-uppercase">Cliff, 52, St Austell</h4>
                             <p class="card-text">"I was redundent for a while and had some health issues, but Ned's Shed
-                                help me realise I wasn't the only one."</p>
+                                helped me realise I wasn't the only one."</p>
             </section>
 
             <section id="links">
@@ -188,9 +188,9 @@
                     <div class="row">
                 <h2>Need to know more about men's mental health issues?</h2>
                 <h5>Here's some links to delve a little deeper:</h5>
-                <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/men-and-mental-health">Mental Health Foundation</a>
+                <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/men-and-mental-health"><img src="assets/images/MHFlogo.png"></a>
                 <h6>Expert Mental Health Advice.</h6>
-                <a href="https://www.mind.org.uk/information-support/your-stories/why-men-need-to-talk/"><img src="assets/images/MHFlogo.png"></a>
+                <a href="https://www.mind.org.uk/information-support/your-stories/why-men-need-to-talk/"><img src="assets/images/Mindlogo2.png"></a>
                 <h6>Get it off your chest.</h6>
                     <a href="https://www.nhs.uk/mental-health"><img src="assets/images/NHSlogo.png"></a>
                     <h6>Your local NHS resource.</h6>
