--- a/index.html
+++ b/index.html
@@ -138,18 +138,21 @@
                 <div class="container">
                     <div class="container">
                         <div class="row">
+                            <h3>Gallery</h3>
                             <div class="gallery">
-                                <h3>Gallery</h3>
-                                <img src="assets/images/Playstation.png" alt="Playstation" width="100" height="75">
+                                <img src="assets/images/Playstation.png" alt="Playstation" width="220" height="150">
                             </div>
                             <div class="gallery">
-                                <img src="assets/images/Funnyman.jpg" alt="Referee" width="100" height="75">
+                                <img src="assets/images/Funnyman.jpg" alt="Referee" width="220" height="150">
                             </div>
                             <div class="gallery">
-                                <img src="assets/images/Hiking.jpg" alt="Hiking" width="100" height="75">
+                                <img src="assets/images/Hiking.jpg" alt="Hiking" width="220" height="150">
                             </div>
                             <div class="gallery">
-                                <img src="assets/images/Beardy.png" alt="Beard" width="100" height="75">
+                                <img src="assets/images/Beardy.png" alt="Beard" width="220" height="150">
+                            </div>
+                            <div class="gallery">
+                                <img src="assets/images/bbq.jpg" alt="bbq" width="220" height="150">
                             </div>
                         </div>
                     </div>
