--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="container-fluid text-center">
             <div class="row">
                 <div>
-                    <h1>Ned's Shed. Let's Talk.</h1>
+                    <h1 id="homehead">Ned's Shed. <em>Let's Talk.<em></h1>
                 </div>
             </div>
         </div>
@@ -139,9 +139,6 @@
                     <div class="container">
                         <div class="row">
                             <h3>Gallery</h3>
-                            <div class="gallery">
-                                <img src="assets/images/Playstation.png" alt="Playstation" width="220" height="150">
-                            </div>
                             <div class="gallery">
                                 <img src="assets/images/Funnyman.jpg" alt="Referee" width="220" height="150">
                             </div>
