carousel feature added

--- a/index.html
+++ b/index.html
@@ -129,31 +129,36 @@
                             <a class="nav-link" href="find-a-shed.html"><button type="button"><h4>Chat Now</h4></button></a>
                         </div>
             </div>
-        </section>
+</section>
 
 <!-- Gallery -->
-        <section>
-
-            <section>
-                <div class="container">
-                    <div class="container">
-                        <div class="row">
-                            <h3>Gallery</h3>
-                            <div class="gallery">
-                                <img src="assets/images/Funnyman.jpg" alt="Referee" width="220" height="150">
-                            </div>
-                            <div class="gallery">
-                                <img src="assets/images/Hiking.jpg" alt="Hiking" width="220" height="150">
-                            </div>
-                            <div class="gallery">
-                                <img src="assets/images/Beardy.png" alt="Beard" width="220" height="150">
-                            </div>
-                            <div class="gallery">
-                                <img src="assets/images/bbq.jpg" alt="bbq" width="220" height="150">
-                            </div>
-                        </div>
-                    </div>
-                </div>
+ <section>
+        <div class="row">
+            <h3>Gallery</h3>
+<div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/images/Funnyman.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/images/Hiking.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/images/Beardy.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/images/bbq.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
             </section>
 
 <!-- Stories -->
