--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- Hero -->
 
-    <header id="home" class="header hero">
+    <header id="home" class="header hero" style="margin-bottom: 50px;">
         <div class="container-fluid text-center">
             <div class="row">
                 <div>
@@ -130,22 +130,23 @@
 </section>
 
 <!-- Gallery -->
- <section>
+<section class="container">
+    <div class="container mx-auto section">
         <div class="row">
-            <h3>Gallery</h3>
-<div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/images/Funnyman.jpg" class="d-block w-100" alt="...">
+        <div class="col-12 col-xl-12">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <img src="assets/images/Funnyman.jpg" class="d-block w-100" alt="referee" width="200" height="150">
       </div>
       <div class="carousel-item">
-        <img src="assets/images/Hiking.jpg" class="d-block w-100" alt="...">
+        <img src="assets/images/Hiking.jpg" class="d-block w-100" alt="hikers" width="200" height="150">
       </div>
       <div class="carousel-item">
-        <img src="assets/images/Beardy.png" class="d-block w-100" alt="...">
+        <img src="assets/images/Beardy.png" class="d-block w-100" alt="beardies" width="200" height="150">
       </div>
       <div class="carousel-item">
-        <img src="assets/images/bbq.jpg" class="d-block w-100" alt="...">
+        <img src="assets/images/bbq.jpg" class="d-block w-100" alt="bbq" width="200" height="150">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
