--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container-fluid text-center">
             <div class="row">
                 <div>
-                    <h1 id="homehead">Ned's Shed. <em>Let's Talk.<em></h1>
+                    <h1 id="homehead">Ned's Shed.<em>Let's Talk.<em></h1>
                 </div>
             </div>
         </div>
@@ -167,7 +167,7 @@
                         <div class="row">
                             <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/Kencopy.png" class="card-img-top" id="portrait" width="400" height="400" alt="Ken">
+                            <img src="assets/images/Kencopy.png" class="card-img-top" id="portrait" width="200" height="200" alt="Ken">
                             <div class="card-body">
                                 <h4 class="card-title text-uppercase">Ken, 41, Camborne</h4>
                                 <p class="card-text">"I have never classed myself as a loner, but I did for many reasons
@@ -177,7 +177,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/Mike3.png" class="card-img-top" width="400" height="400" id="portrait" alt="Mike">
+                            <img src="assets/images/Mike3.png" class="card-img-top" width="200" height="200" id="portrait" alt="Mike">
                             <div class="card-body">
                                 <h4 class="card-title text-uppercase">Mike, 38, Tintagel</h4>
                                 <p class="card-text">"I found myself widowed at an early age, but Ned's Shed helped me
@@ -187,28 +187,39 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/CornishCliff3.png" class="card-img-top" width="400" height="400" id="portrait" alt="Cliff">
+                            <img src="assets/images/CornishCliff3.png" class="card-img-top" width="200" height="200" id="portrait" alt="Cliff">
                             <div class="card-body">
                             <h4 class="card-title text-uppercase">Cliff, 52, St Austell</h4>
                             <p class="card-text">"I was redundent for a while and had some health issues, but Ned's Shed
                                 helped me realise I wasn't the only one."</p>
             </section>
-
-            <section id="links">
-                <div class="container">
-                    <div class="row">
-                <h2>Need to know more about men's mental health issues?</h2>
-                <h5>Here's some links to delve a little deeper:</h5>
-                <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/men-and-mental-health"><img src="assets/images/MHFlogo.png"></a>
-                <h6>Expert Mental Health Advice.</h6>
-                <a href="https://www.mind.org.uk/information-support/your-stories/why-men-need-to-talk/"><img src="assets/images/Mindlogo2.png"></a>
-                <h6>Get it off your chest.</h6>
-                    <a href="https://www.nhs.uk/mental-health"><img src="assets/images/NHSlogo.png"></a>
-                    <h6>Your local NHS resource.</h6>
-                </div>
-                </div>
-            </section>
-
+<!--links-->
+                <section id="links">
+                    <div class="container">
+                        <div class="row text-center">
+                            <h2>Need to know more about men's mental health issues?</h2>
+                            <h5>Here's some links to delve a little deeper:</h5>
+                            <div class="col-md-4">
+                                <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/men-and-mental-health">
+                                    <img src="assets/images/MHFlogo.png" alt="Mental Health Foundation" style="width: 100px;">
+                                </a>
+                                <h6>Expert Mental Health Advice.</h6>
+                            </div>
+                            <div class="col-md-4">
+                                <a href="https://www.mind.org.uk/information-support/your-stories/why-men-need-to-talk/">
+                                    <img src="assets/images/Mindlogo2.png" alt="Mind" style="width: 100px;">
+                                </a>
+                                <h6>Get it off your chest.</h6>
+                            </div>
+                            <div class="col-md-4">
+                                <a href="https://www.nhs.uk/mental-health">
+                                    <img src="assets/images/NHSlogo.png" alt="NHS" style="width: 100px;">
+                                </a>
+                                <h6>Your local NHS resource.</h6>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             <!-- contact info-->
     
                             <section id="Join">
