--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container-fluid text-center">
             <div class="row">
                 <div>
-                    <h1 id="homehead">Ned's Shed.<em>Let's Talk.<em></h1>
+                    <h1>Ned's Shed. <em>Let's Talk.</em></h1>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
             <div class="container mx-auto section">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <h2>What is Ned's Shed?</h2>
+                        <h1>What is Ned's Shed?</h1>
                         <p>Ned's Shed is a real and virtual space where Cornish Men can talk.<br>
 
                             <br>We're men right? Cornish men. We're not meant to share our feelings. Are we?
@@ -167,7 +167,7 @@
                         <div class="row">
                             <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/Kencopy.png" class="card-img-top" id="portrait" width="150" height="150" alt="Ken">
+                            <img src="assets/images/Kencopy.png" class="card-img-top" id="portrait" alt="Ken" style="width: 100%; height: auto;">>
                             <div class="card-body">
                                 <h4 class="card-title text-uppercase">Ken, 41, Camborne</h4>
                                 <p class="card-text">"I have never classed myself as a loner, but I did for many reasons
@@ -177,7 +177,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/Mike3.png" class="card-img-top" width="150" height="150" id="portrait" alt="Mike">
+                            <img src="assets/images/Mike3.png" class="card-img-top" id="portrait" alt="Mike" style="width: 100%; height: auto;">>
                             <div class="card-body">
                                 <h4 class="card-title text-uppercase">Mike, 38, Tintagel</h4>
                                 <p class="card-text">"I found myself widowed at an early age, but Ned's Shed helped me
@@ -187,11 +187,14 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/CornishCliff3.png" class="card-img-top" width="150" height="150" id="portrait" alt="Cliff">
+                            <img src="assets/images/CornishCliff3.png" class="card-img-top" id="portrait" alt="Cliff" style="width: 100%; height: auto;">>
                             <div class="card-body">
                             <h4 class="card-title text-uppercase">Cliff, 52, St Austell</h4>
                             <p class="card-text">"I was redundent for a while and had some health issues, but Ned's Shed
                                 helped me realise I wasn't the only one."</p>
+                                </div>
+                            </div>
+                        </div>
             </section>
 <!--links-->
                 <section id="links">
