--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <div class="row">
                             <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/Kencopy.png" class="card-img-top" id="portrait" alt="Ken" style="width: 100%; height: auto;">>
+                            <img src="assets/images/Kencopy.png" class="card-img-top" id="portrait" alt="Ken" style="width: 70%; height: auto; display: block; margin: 0 auto;">
                             <div class="card-body">
                                 <h4 class="card-title text-uppercase">Ken, 41, Camborne</h4>
                                 <p class="card-text">"I have never classed myself as a loner, but I did for many reasons
@@ -177,7 +177,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/Mike3.png" class="card-img-top" id="portrait" alt="Mike" style="width: 100%; height: auto;">>
+                            <img src="assets/images/Mike3.png" class="card-img-top" id="portrait" alt="Mike" style="width: 70%; height: auto; display: block; margin: 0 auto;">
                             <div class="card-body">
                                 <h4 class="card-title text-uppercase">Mike, 38, Tintagel</h4>
                                 <p class="card-text">"I found myself widowed at an early age, but Ned's Shed helped me
@@ -187,7 +187,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/CornishCliff3.png" class="card-img-top" id="portrait" alt="Cliff" style="width: 100%; height: auto;">>
+                            <img src="assets/images/CornishCliff3.png" class="card-img-top" id="portrait" alt="Cliff" style="width: 70%; height: auto; display: block; margin: 0 auto;">
                             <div class="card-body">
                             <h4 class="card-title text-uppercase">Cliff, 52, St Austell</h4>
                             <p class="card-text">"I was redundent for a while and had some health issues, but Ned's Shed
