--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- Hero -->
 
-    <header id="home" class="header hero" style="margin-bottom: 50px;">
+        <header id="home" class="header hero" style="padding: 50px 0; margin-bottom: 30px;">
         <div class="container-fluid text-center">
             <div class="row">
                 <div>
@@ -73,7 +73,8 @@
     </header>
 
     <main>
-        <section id="intro" class="container">
+<!--Intro Section -->
+        <section id="intro" class="container" style="padding: 20px 0;">
             <div class="container mx-auto section">
                 <div class="row">
                     <div class="col-md-12 text-center">
