--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- Hero -->
 
-        <header id="home" class="header hero" style="padding: 50px 0; margin-bottom: 30px;">
+        <header id="home" class="header hero" style="padding: 80px 0; margin-bottom: 30px;">
         <div class="container-fluid text-center">
             <div class="row">
                 <div>
@@ -131,35 +131,37 @@
 </section>
 
 <!-- Gallery -->
-<section class="container">
+<section>
     <div class="container mx-auto section">
+        <h3>Gallery:</h3>
         <div class="row">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <div class="col-12 col-xl-12">
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <img src="assets/images/Funnyman.jpg" class="d-block w-100" alt="referee" width="200" height="150">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/images/Hiking.jpg" class="d-block w-100" alt="hikers" width="200" height="150">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/images/Beardy.png" class="d-block w-100" alt="beardies" width="200" height="150">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/images/bbq.jpg" class="d-block w-100" alt="bbq" width="200" height="150">
-      </div>
+            <div id="carouselExampleRide" class="carousel slide" data-bs-ride="carousel" data-bs-interval="100">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="assets/images/Funnyman.jpg" class="d-block w-100" alt="referee" style="height: 300px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/Hiking.jpg" class="d-block w-100" alt="hikers" style="height: 300px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/Beardy.png" class="d-block w-100" alt="beardies" style="height: 300px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/bbq.jpg" class="d-block w-100" alt="bbq" style="height: 300px;">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-            </section>
+</section>
 
 <!-- Stories -->
             <section id="stories">
@@ -267,5 +269,5 @@
 <script src="https://kit.fontawesome.com/aa9af45995.js" crossorigin="anonymous"></script>
 </body>
 
-</html> 
+</html>
 
