contact section changes

--- a/index.html
+++ b/index.html
@@ -226,42 +226,52 @@
                         </div>
                     </div>
                 </section>
-            <!-- contact info-->
+
+            <!-- Join us section-->
     
                             <section id="Join">
                                 <div class="container">
                                     <div class="row">
-                                        <h2>Join Us</h2>
-                                        <p>Want to join us? Fill in the form below and we'll get back to you.</p>
+                                        <h2>Join us on Facebook, Instagram and X.</h2>
+                                        <h4>You can also fill in the form below and we'll get back to you.</h4>
+                                        <div class="social-links my-4">
+                                            <a href="https://www.facebook.com" target="_blank"
+                                                aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener"><i
+                                                    class="fa-brands fa-square-facebook"></i></a>
+                                            <a href="https://www.instagram.com" target="_blank"
+                                                aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
+                                                    class="fa-brands fa-instagram"></i></a>
+                                            <a href="https://www.x.com" target="_blank" aria-label="Visit our X feed (opens in a new tab)"
+                                                rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
+                                        </div>
+                                    </div>
+                                        
                                         <form action="form.php" method="post">
                                             <div class="form-group">
+                                                <label for="name">Name:</label>
+                                                <input type="text" class="form-control" id="name" name="name">
+                                                <label for="Email">Email:</label>
+                                                <input type="text" class="form-control" id="email" name="email">
+                            </div>
+                        </div>
+                    </section id="Address">
                             <div class="row">
                             <h3 class="sub-heading-color">Contact info</h3>
                             <address>
                                 <strong><i class="fa-solid fa-location-dot"></i>Ned's Shed Registered Charity</strong><br>
+                                15 River Street<br>
                                 Truro<br>
-                                Cornwall, TR1 1AA
+                                Cornwall TR1 1AA
                             </address>
                             <p><i class="fa-solid fa-phone"></i> 01872 111000<br>
                             </p>
-                            <div class="social-links my-4">
-                                <a href="https://www.instagram.com" target="_blank"
-                                    aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
-                                        class="fa-brands fa-instagram"></i></a>
-                                <a href="https://www.facebook.com" target="_blank"
-                                    aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener"><i
-                                        class="fa-brands fa-square-facebook"></i></a>
-                                <a href="https://www.x.com" target="_blank" aria-label="Visit our X feed (opens in a new tab)"
-                                    rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
-                            </div>
-                        </div> 
 </div>
 </div>
 </section>
 </main>
 <!-- Contact info -->
     </footer>
-    <p>&copy; 2025 Wellness Project. All rights reserved.</p>
+    <p>&copy; 2025 BW Wellness Project. All rights reserved.</p>
 </footer>
 </body>
 
