--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
 
     <!-- Bootstrap CSS -->
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- Custom CSS -->
 
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -130,34 +134,42 @@
             </div>
 </section>
 
-<!-- Gallery -->
+<!-- Carousel -->
 <section>
     <div class="container mx-auto section">
         <h3>Gallery:</h3>
         <div class="row">
-            <div id="carouselExampleRide" class="carousel slide" data-bs-ride="carousel" data-bs-interval="100">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="assets/images/Funnyman.jpg" class="d-block w-100" alt="referee" style="height: 300px;">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/images/Hiking.jpg" class="d-block w-100" alt="hikers" style="height: 300px;">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/images/Beardy.png" class="d-block w-100" alt="beardies" style="height: 300px;">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/images/bbq.jpg" class="d-block w-100" alt="bbq" style="height: 300px;">
-                    </div>
+                  <div class="carousel-item active">
+                    <img src="assets/images/Funnyman.jpg" class="d-block w-100" alt="Slide 1">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/images/Hiking.jpg" class="d-block w-100" alt="Slide 2">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/images/Beardy.png" class="d-block w-100" alt="Slide 3">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/images/bbq.jpg" class="d-block w-100" alt="bbq" style="height: 300px;">
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+                </div>
+                <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              
+                <!-- JavaScript to set the interval for autoplay -->
+<script>
+    $('.carousel').carousel({
+      interval: 2000 // Change the interval time (in milliseconds) as needed
+    });
+  </script>
             </div>
         </div>
     </div>
@@ -248,7 +260,7 @@
                                         
                                         <form action="form.php" method="post">
                                             <div class="form-group">
-                                                <label for="name">Name:</label>
+                                                <label for="name">Email:</label>
                                                 <input type="text" class="form-control" id="name" name="name">
                                                 <label for="Email">Email:</label>
                                                 <input type="text" class="form-control" id="email" name="email">
