--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
 
     <!-- Bootstrap CSS -->
 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-    <!-- Custom CSS -->
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+    
+<!-- Custom CSS -->
 
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -33,10 +30,11 @@
     <!-- Classes on body set to work with mt-auto on footer to ensure it always stays at the bottom of the page -->
 
     <!-- Navigation -->
-    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/images/" alt="" class="logo">
+                <img src="assets/images/logo.png" alt="Logo" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +55,7 @@
                         <a class="nav-link" href="#Join">Join Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="find-a-shed.html"><button-type="button">Find a shed</a></button>
+                        <a class="nav-link" href="find-a-shed.html">Find a shed</a>
                     </li>
                 </ul>
             </div>
@@ -289,7 +287,12 @@
 
 <!-- Font Awesome kit -->
 <script src="https://kit.fontawesome.com/aa9af45995.js" crossorigin="anonymous"></script>
-</body>
 
+ <!-- Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+
+</body>
 </html>
 
